--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,10 @@
         </div>
         
         <div class="image-container">
-            <img id="imagePatient" style="height: 350px;width: 350px;" src="confirm.PNG" alt="confirm">
-            <img id="imageLight" style="height: 200px;width: 200px;" src="lightOff.PNG" alt="confirm">
+            <img id="imagePatient" style="height: 250px;width: 250px;" src="confirm.PNG" alt="confirm">
+            <img id="imageLight" style="height: 180px;width: 180px;" src="lightOff.PNG" alt="confirm">
+            <p>Mr.Toy PLC to AWS:</p>
+            <img src="toys.png"style="height: 300px;width: 300px;" ></p>
         </div>
 
         <div class="light-buttons" style="margin-top: 30px;">
