--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         </div>
         
         <div class="image-container">
-            <img id="imagePatient" style="height: 250px;width: 250px;" src="confirm.PNG" alt="confirm">
+            <img id="imagePatient" style="height: 300px;width: 350px;" src="confirm.jpg" alt="confirm">
             <img id="imageLight" style="height: 180px;width: 180px;" src="lightOff.PNG" alt="confirm">
             <p>Mr.Toy PLC to AWS:</p>
             <img src="toys.png"style="height: 300px;width: 300px;" ></p>
